--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,37 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.App{
+    display: flex;
+    flex-direction: row;
 }
-.input-field{
-  padding: 1em;
-  width: 80%;
 
+.Content{
+    display: flex;
+    flex-direction: column;
+    margin-left: 20px;
 }
+
+.input-field {
+  padding: 1em;
+  width: 100%;
+  margin-left: 25px;
+  border-radius: 5px;
+  margin-bottom: 30px;
+}
+
+h3,p{
+    margin-left: 27px;
+}
+
 .card {
   padding: 2em;
 }
 
 .read-the-docs {
   color: #888;
+}
+
+.leaflet-container {
+  width: 800px;
+  height: 70vh;
+  border-radius: 5px;
+  margin-left: 35%;
 }
