--- a/src/components/Map/Map.css
+++ b/src/components/Map/Map.css
@@ -2,10 +2,10 @@
   width: 800px;
   height: 75vh;
   border-radius: 5px;
-  margin-left: 25%;
+  margin-left: 240px;
 }
 
-.App {
+.app {
   display: flex;
   flex-direction: row;
 }
