--- a/src/components/Map/Map.css
+++ b/src/components/Map/Map.css
@@ -3,6 +3,7 @@
   height: 75vh;
   border-radius: 5px;
   margin-left: 240px;
+  margin-top: 40px;
 }
 
 .app {
@@ -12,4 +13,13 @@
 
 .card {
   padding: 2em;
+}
+
+@media (min-width: 320px) and (max-width: 769px){
+  .leaflet-container {
+    width: 800px;
+    height: 75vh;
+    border-radius: 5px;
+    margin-left: 2px;
+  }
 }
