--- a/src/components/Map/Map.css
+++ b/src/components/Map/Map.css
@@ -11,7 +11,7 @@
 
 @media (min-width: 320px) and (max-width: 769px){
   .leaflet-container {
-    width: 800px;
+    width: 100%;
     height: 75vh;
     border-radius: 5px;
     margin-left: 2px;
